--- a/roles/syslog-forwarder/tasks/debian.yml
+++ b/roles/syslog-forwarder/tasks/debian.yml
@@ -24,16 +24,6 @@
     dest: /etc/rsyslog.conf
     mode: 0644
 
-# ip_wanfirewall1
-# ip_wanfirewall2
-# ip_corefirewall1
-# ip_corefirewall2
-# ip_wlc1
-# ip_wlc2
-# ip_switches
-# ip_synology
-# ip_vcenter
-
 - name: Configure rsyslog config file
   copy:
     src: sys_log
@@ -46,13 +36,8 @@
     dest: /etc/filebeat/filebeat.yml
     mode: 0644
 
-# logstach_server1
-# logstach_server2
-# local_server_ip
-# region_letters
-
 - name: Enable the required syslog services
-  systemd:
+  service:
     name: "{{ syslog_req_services }}"
     state: started
     enabled: yes
